--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ description: Algorithms, Math, Rants
 navbar-links:
   About Me: "aboutme"
   Resources:
+    - GitHub: "https://github.com/sqd"
     - LinkedIn: "https://linkedin.com/in/han-you/"
-    - GitHub Pages: "https://github.com/sqd"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -87,8 +87,8 @@ social-network-links:
 
 # Select which share links to show in posts
 share-links-active:
-  linkedin: true
-  github: true
+#  linkedin: true
+#  github: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
